--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "6.6.0",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "6.10.0",
+    "@rneui/themed": "4.0.0-rc.8",
+    "@supabase/supabase-js": "2.44.2",
     "expo": "~51.0.17",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
@@ -35,7 +38,9 @@
     "react-native-reanimated": "~3.10.1",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
-    "react-native-web": "~0.19.10"
+    "react-native-url-polyfill": "2.0.0",
+    "react-native-web": "~0.19.10",
+    "zustand": "4.5.4"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
