--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "6.10.0",
     "@rneui/themed": "4.0.0-rc.8",
-    "@supabase/supabase-js": "2.44.2",
+    "@supabase/supabase-js": "2.43.5",
     "expo": "~51.0.17",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
@@ -49,6 +49,7 @@
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
+    "react-native-dotenv": "3.4.11",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
