--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "ios": "expo start --ios",
     "web": "expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "type-check": "tsc --project tsconfig.json --noEmit --watch"
   },
   "jest": {
     "preset": "jest-expo"
@@ -22,6 +23,7 @@
     "@react-navigation/native-stack": "6.10.0",
     "@rneui/themed": "4.0.0-rc.8",
     "@supabase/supabase-js": "2.43.5",
+    "@tanstack/react-query": "5.51.1",
     "expo": "~51.0.17",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
