--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "2.0.0",
     "react-native-web": "~0.19.10",
+    "react-native-webview": "^13.10.4",
     "zustand": "4.5.4"
   },
   "devDependencies": {
