--- a/package.json
+++ b/package.json
@@ -24,25 +24,25 @@
     "@rneui/themed": "4.0.0-rc.8",
     "@supabase/supabase-js": "2.43.5",
     "@tanstack/react-query": "5.51.1",
-    "expo": "~51.0.17",
+    "expo": "~51.0.21",
     "expo-constants": "~16.0.2",
     "expo-font": "~12.0.7",
     "expo-linking": "~6.3.1",
-    "expo-router": "~3.5.17",
+    "expo-router": "~3.5.18",
     "expo-splash-screen": "~0.27.5",
     "expo-status-bar": "~1.12.1",
-    "expo-system-ui": "~3.0.6",
+    "expo-system-ui": "~3.0.7",
     "expo-web-browser": "~13.0.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.74.2",
+    "react-native": "0.74.3",
     "react-native-gesture-handler": "~2.16.1",
     "react-native-reanimated": "~3.10.1",
-    "react-native-safe-area-context": "4.10.1",
+    "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-url-polyfill": "2.0.0",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "^13.10.4",
+    "react-native-webview": "13.8.6",
     "zustand": "4.5.4"
   },
   "devDependencies": {
@@ -52,7 +52,6 @@
     "@types/react-test-renderer": "^18.0.7",
     "jest": "^29.2.1",
     "jest-expo": "~51.0.3",
-    "react-native-dotenv": "3.4.11",
     "react-test-renderer": "18.2.0",
     "typescript": "~5.3.3"
   },
